--- a/day09/Day09Study/WpfMqttSubApp/Views/MainView.xaml
+++ b/day09/Day09Study/WpfMqttSubApp/Views/MainView.xaml
@@ -1,13 +1,14 @@
-﻿<mah:MetroWindow
+﻿<mah:MetroWindow 
     x:Class="WpfMqttSubApp.Views.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:WpfMqttSubApp.Views"
+    xmlns:helper="clr-namespace:WpfMqttSubApp.Helpers"
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    xmlns:Dialog="MahApps.Metro.Controls.Dialogs"
+    xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     mc:Ignorable="d"
     ResizeMode="NoResize"
     Title="IoT MQTT Subscribe App" Height="350" Width="600"
@@ -21,34 +22,36 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         
-        <!-- UI 컨트롤 구성-->
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Label Content="MQTT Broker Host" VerticalAlignment="Center" HorizontalAlignment="Right" />
-            <TextBox Margin="3" mah:TextBoxHelper.Watermark="브로커주소 입력"
-                     Width="100" Text="255.255.255.255"/>
-            <Button Margin="3"
+        <!-- UI컨트롤 구성 -->
+        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Label Content="MQTT Broker Host" VerticalAlignment="Center" />
+            <TextBox Margin="3" mah:TextBoxHelper.Watermark="브로커주소 입력"                     
+                     Width="100" Text="{Binding BrokerHost}"/>
+            <Button Margin="3" 
                     Style="{StaticResource MahApps.Styles.Button.Square.Accent}"
                     Command="{Binding ConnectBrokerCommand}">
-                <TextBlock Text="CONNECT" Margin="5,0"/>
+                <TextBlock Text="CONNECT" Margin="5,0" />
             </Button>
-            
+                    
             <Label Content="Database Host" VerticalAlignment="Center" />
-            <TextBox Margin="3" mah:TextBoxHelper.Watermark="브로커주소 입력"
+            <TextBox Margin="3" mah:TextBoxHelper.Watermark="DB주소 입력"
                      Width="100" Text="{Binding DatabaseHost}"/>
-            <Button  Margin="3"
-                     Style="{StaticResource MahApps.Styles.Button.Square.Highlight}"
-                     Command="{Binding ConnectDatabaseCommand}">
-                <TextBlock Text="CONNECT" Margin="5,0"/>
+            <Button Margin="3"
+                    Style="{StaticResource MahApps.Styles.Button.Square.Highlight}"
+                    Command="{Binding ConnectDatabaseCommand}">
+                <TextBlock Text="CONNECT" Margin="5,0" />
             </Button>
         </StackPanel>
 
-        <RichTextBox Grid.Row="1" Margin="5" VerticalScrollBarVisibility="Visible">
+        <RichTextBox x:Name="LogBox" Grid.Row="1" Margin="5" VerticalScrollBarVisibility="Visible"
+                     IsReadOnly="True"
+                     helper:RichTextBoxHelper.BindableDocument="{Binding LogText, UpdateSourceTrigger=PropertyChanged}">
             <RichTextBox.Resources>
                 <Style TargetType="Paragraph">
-                    <Setter Property="Margin" Value="0"/>
+                    <Setter Property="Margin" Value="0" />
                 </Style>
             </RichTextBox.Resources>
         </RichTextBox>
